--- a/WebSite/Views/Home/Home.cshtml
+++ b/WebSite/Views/Home/Home.cshtml
@@ -1,5 +1,18 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿<html>
+<head>
+    <title>Classified Ads</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+</head>
+<body>
+    
+    <div class="container-fluid">
+
+        <div class="container-fluid" id="topImage">
+            <h1>hi friends</h1>
+        </div>
+
+    </div>
+</body>
+</html>
