several changes have been made to the views in accordance to the designs + several images were added and had been placed under root folder

--- a/WebSite/Views/Home/Header.cshtml
+++ b/WebSite/Views/Home/Header.cshtml
@@ -11,7 +11,7 @@
     <style>
         .navbar {
   margin-bottom: 0;
-  background-color: #fff;
+  background-image: linear-gradient(to right, #320D7E, #25E7E1);
   z-index: 9999;
   border: 0;
   font-size: 12px !important;
@@ -21,7 +21,7 @@
 }
 
 .navbar li a, .navbar .navbar-brand {
-  color: #0288d1 !important;
+  color: #fff !important;
 }
 
 .navbar-nav li a:hover, .navbar-nav li.active a {
