Made several changes to AdsPage and Home Page

--- a/WebSite/Views/Home/AdsPage.cshtml
+++ b/WebSite/Views/Home/AdsPage.cshtml
@@ -47,10 +47,29 @@
             <div class="col-sm-6">
                 <h1 style="font-size: 55px">Post Yours Ads</h1>
                 <p>For Successful Businesses & For You</p>
-
-                <div style="margin-top:75px; margin-bottom:50px">
-                    <a href="#" class="btn btn-default btn-lg" role="button" style="background-color:#F8D210; border-radius:24px">SEE AD POST</a>
-                    <a href="#" class="btn btn-default btn-lg" role="button" style="background-color:#F8D210; border-radius:24px">CREATE YOUR ADS</a>
+                <div class="row" style="margin-top: 50px">
+                    <form action="#">
+                        <div class="form-group col-sm-8">
+                            <input type="text" class="form-control" id="searchQuery" placeholder="Search Item" style="border-radius:24px; padding:22px">
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <select class="form-control" id="sel1" style="border-radius:24px">
+                                <option>Gampaha</option>
+                                <option>Galle</option>
+                                <option>Kandy</option>
+                                <option>Colombo</option>
+                                <option>Ekala</option>
+                                <option>Kandana</option>
+                                <option>Kottawa</option>
+                                <option>Ganemulla</option>
+                                <option>Homagama</option>
+                                <option>Maharagama</option>
+                            </select>
+                        </div>
+                        <div class="col-sm-2">
+                            <button type="submit" class="btn btn-default" style="background-color:#F8D210; border-radius:24px; border-color: transparent">Search</button>
+                        </div>
+                    </form>
                 </div>
             </div>
             <div class="col-sm-6 text-center">
