--- a/WebSite/Views/Home/Home.cshtml
+++ b/WebSite/Views/Home/Home.cshtml
@@ -29,12 +29,12 @@
                     <h1 style="font-size: 55px">Post Yours Ads</h1>
                     <p>For Successful Businesses & For You</p>
                         <div class="row" style="margin-top: 50px">
-                            <form action="/action_page.php">
+                            <form action="#">
                                 <div class="form-group col-sm-6">
                                     <input type="text" class="form-control" id="searchQuery" placeholder="Search Item" style="border-radius:24px; padding:22px">
                                 </div>
                                 <div class="col-sm-2">
-                                    <button type="submit" class="btn btn-default btn-lg" style="background-color:#F8D210; border-radius:24px">Search</button>
+                                    <button type="submit" class="btn btn-default btn-lg" style="background-color:#F8D210; border-radius:24px; border-color: transparent">Search</button>
                                 </div>
                             </form>
                         </div>
