--- a/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
+    <link rel="stylesheet" href="~/css/LoginModelCSS.css" />
 
     <style>
         .navbar {
@@ -23,9 +23,9 @@
             border-radius: 0;
         }
 
-            .navbar li a, .navbar .navbar-brand {
+        .navbar li a, .navbar .navbar-brand {
                 color: #fff !important;
-            }
+        }
 
         .navbar-nav li a:hover, .navbar-nav li.active a {
             color: #fff !important;
@@ -63,12 +63,44 @@
                         <li><a href="#portfolio">CREATE AD</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#pricing">LOGIN</a></li>
+                        <li><a href="#myModal" data-toggle="modal">LOGIN</a></li>
                         <li><a href="#contact">REGISTER</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
+
+        <!-- Modal HTML -->
+        <div id="myModal" class="modal fade" style="margin-top:50px">
+            <div class="modal-dialog modal-login">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">User Login</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <form action="/examples/actions/confirmation.php" method="post">
+                            <div class="form-group">
+                                <i class="fa fa-user"></i>
+                                <input type="text" class="form-control" placeholder="Username" required="required">
+                            </div>
+                            <div class="form-group">
+                                <i class="fa fa-lock"></i>
+                                <input type="password" class="form-control" placeholder="Password" required="required">
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
+                            </div>
+                        </form>
+
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#">Forgot Password?</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <div>
