--- a/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/Views/Shared/_Layout.cshtml
@@ -82,11 +82,11 @@
                         <form action="/examples/actions/confirmation.php" method="post">
                             <div class="form-group">
                                 <i class="fa fa-user"></i>
-                                <input type="text" class="form-control" placeholder="Username" required="required">
+                                <input type="text" class="form-control" placeholder="Username" style="border-radius:24px" required="required">
                             </div>
                             <div class="form-group">
                                 <i class="fa fa-lock"></i>
-                                <input type="password" class="form-control" placeholder="Password" required="required">
+                                <input type="password" class="form-control" placeholder="Password" style="border-radius:24px" required="required">
                             </div>
                             <div class="form-group">
                                 <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
