--- a/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/Views/Shared/_Layout.cshtml
@@ -89,7 +89,7 @@
                                 <input type="password" class="form-control" placeholder="Password" style="border-radius:24px" required="required">
                             </div>
                             <div class="form-group">
-                                <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
+                                <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login" style="border-radius:24px">
                             </div>
                         </form>
 
