--- a/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/Views/Shared/_Layout.cshtml
@@ -79,14 +79,14 @@
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <form action="#" method="post">
+                        <form action="/user/login/" method="get">
                             <div class="form-group">
                                 <i class="fa fa-user"></i>
-                                <input type="text" class="form-control" placeholder="Username" style="border-radius:24px" required="required">
+                                <input name="username" id="username" type="text" class="form-control" placeholder="Username" style="border-radius:24px" required="required">
                             </div>
                             <div class="form-group">
                                 <i class="fa fa-lock"></i>
-                                <input type="password" class="form-control" placeholder="Password" style="border-radius:24px" required="required">
+                                <input name="password" id="password" type="password" class="form-control" placeholder="Password" style="border-radius:24px" required="required">
                             </div>
                             <div class="form-group">
                                 <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login" style="border-radius:24px">
@@ -112,18 +112,18 @@
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <form action="#" method="post">
+                        <form action="/user/register/" method="post">
                             <div class="form-group">
                                 <i class="fa fa-user"></i>
-                                <input type="text" class="form-control" placeholder="Username" style="border-radius:24px" required="required">
+                                <input id="username" name="username" type="text" class="form-control" placeholder="Username" style="border-radius:24px" required="required">
                             </div>
                             <div class="form-group">
                                 <i class="fa fa-user"></i>
-                                <input type="text" class="form-control" placeholder="Email" style="border-radius:24px" required="required">
+                                <input id="email" name="email" type="text" class="form-control" placeholder="Email" style="border-radius:24px" required="required">
                             </div>
                             <div class="form-group">
                                 <i class="fa fa-lock"></i>
-                                <input type="password" class="form-control" id="regPassword" placeholder="Password" style="border-radius:24px" required="required">
+                                <input id="password" name="password" type="password" class="form-control" id="regPassword" placeholder="Password" style="border-radius:24px" required="required">
                             </div>
                             <div class="form-group">
                                 <i class="fa fa-lock"></i>
