--- a/WebSite/Views/Home/PostAd.cshtml
+++ b/WebSite/Views/Home/PostAd.cshtml
@@ -6,6 +6,45 @@
         color: #ffffff;
         padding-top: 100px;
     }
+
+    .formInput{
+        padding:22px;
+    }
+
+    #regForm {
+        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+        border-radius:5px;
+        margin-top:20px;
+        margin-bottom:50px;
+    }
+
+    .col-centered{
+    float: none;
+    margin: 0 auto;
+    }
+
+    .btn-file {
+    position: relative;
+    overflow: hidden;
+    }
+
+    .btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+    }
+
+ 
 </style>
 
 @{
@@ -18,18 +57,8 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h1 style="font-size: 55px">Post Yours Ads</h1>
+                <h1 style="font-size: 65px">Post Yours Ads</h1>
                 <p>For Successful Businesses & For You</p>
-                <div class="row" style="margin-top: 50px">
-                    <form action="#">
-                        <div class="form-group col-sm-6">
-                            <input type="text" class="form-control" id="searchQuery" placeholder="Search Item" style="border-radius:24px; padding:22px">
-                        </div>
-                        <div class="col-sm-2">
-                            <button type="submit" class="btn btn-default btn-lg" style="background-color:#F8D210; border-radius:24px; border-color: transparent">Search</button>
-                        </div>
-                    </form>
-                </div>
             </div>
             <div class="col-sm-6 text-center">
                 <img src="~/images/colloborate2.png" style="width:60%; height:50%" />
@@ -40,14 +69,122 @@
 
 </section>
 
-<div class="container">
+<div class="container" id="regForm">
     <h1 class="text-center" style="font-size: 60px"><strong>One Click Away For A Great Ad!</strong></h1>
-    <div class="row">
-        <div class="col-sm-6">
-
+    <form action="/action_page.php">
+        <div class="row">
+            <div class="col-sm-6">
+                <div>
+                    <div class="form-group">
+                        <label for="iName">Item Name:</label>
+                        <input type="text" class="form-control formInput no-border" placeholder="Item Name" id="iName" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="iCategory">Item Category:</label>
+                        <input type="text" class="form-control formInput no-border" placeholder="Item Category" id="iCategory" required>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-group col-sm-6">
+                        <label for="iAvailable">Items Available:</label>
+                        <input type="text" class="form-control formInput" placeholder="Availability" id="iAvailable" required>
+                    </div>
+                    <div class="form-group col-sm-6">
+                        <label for="iLoc">Location:</label>
+                        <input type="email" class="form-control formInput" placeholder="Item Location" id="iLoc" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="iDescription">Description:</label>
+                    <textarea class="form-control formInput" rows="5" placeholder="Describe Your Product" id="iDescription" required></textarea>
+                </div>
+                <div class="row">
+                    <div class="form-group col-sm-3">
+                        <label for="iContact">Contact Number:</label>
+                        <input type="email" class="form-control" placeholder="Mobile" id="iContact" required>
+                    </div>
+                    <div class="form-group col-sm-3">
+                        <label for="iPrice">Price:</label>
+                        <input type="email" class="form-control" placeholder="Rs." id="iPrice" required>
+                    </div>
+                    <div class="form-group col-sm-3">
+                        <label for="iCondition">Condition:</label>
+                        <select class="form-control" id="iCondition">
+                            <option>Brand New</option>
+                            <option>Used</option>
+                            <option>Refurbished</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-sm-3">
+                        <label for="iNegotiable">Negotiable:</label>
+                        <select class="form-control" id="iNegotiable">
+                            <option>Negotiable</option>
+                            <option>Not Negotiable</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="col-sm-10 col-centered">
+                    <div class="thumbnail">
+                        <img src="http://placehold.it/180" id="iImage" alt="Product Image" style="width:100%; height:400px">
+                    </div>
+                </div>
+                <div class="form-group col-sm-8 col-centered">
+                    <div class="input-group">
+                        <span class="input-group-btn">
+                            <span class="btn btn-default btn-file">
+                                Browse… <input type="file" id="imgInp">
+                            </span>
+                        </span>
+                        <input type="text" class="form-control" readonly>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-sm-6">
-
+        <div class="col-sm-12" style="margin-top:50px; margin-bottom:50px">
+            <div class="col-sm-4 text-center col-centered">
+                <button type="submit" class="btn btn-default btn-lg" style="background-color:#F8D210; border-radius:24px; border-color: transparent; padding-left:100px; padding-right:100px">Create Post</button>
+            </div>
         </div>
-    </div>
+    </form>
 </div>
+
+
+<script>
+     $(document).ready( function() {
+    	$(document).on('change', '.btn-file :file', function() {
+		var input = $(this),
+			label = input.val().replace(/\\/g, '/').replace(/.*\//, '');
+		input.trigger('fileselect', [label]);
+		});
+
+		$('.btn-file :file').on('fileselect', function(event, label) {
+		    
+		    var input = $(this).parents('.input-group').find(':text'),
+		        log = label;
+		    
+		    if( input.length ) {
+		        input.val(log);
+		    } else {
+		        if( log ) alert(log);
+		    }
+	    
+		});
+		function readURL(input) {
+		    if (input.files && input.files[0]) {
+		        var reader = new FileReader();
+		        
+		        reader.onload = function (e) {
+		            $('#iImage').attr('src', e.target.result);
+		        }
+		        
+		        reader.readAsDataURL(input.files[0]);
+		    }
+		}
+
+		$("#imgInp").change(function(){
+		    readURL(this);
+		}); 	
+	});
+</script>
