--- a/WebSite/Views/Home/AdsPage.cshtml
+++ b/WebSite/Views/Home/AdsPage.cshtml
@@ -46,7 +46,7 @@
         <div class="row">
             <div class="col-sm-6">
                 <h1 style="font-size: 55px">Post Yours Ads</h1>
-                <p>For Successful Businesses & For You</p>
+                <p>@ViewBag.Name</p>
                 <div class="row" style="margin-top: 50px">
                     <form action="#">
                         <div class="form-group col-sm-8">
@@ -100,7 +100,7 @@
 										<p class="price"><strong>@ad.Price</strong></p>
 									</div>
 									<div class="col-sm-5 text-center">
-
+										
 										<a href="/AdView/viewAdvert/@ad.ItemId" class="btn btn-default btn-lg viewMoreBtn" role="button">View More</a>
 									</div>
 								</div>
