updates to login

--- a/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
 				<div class="collapse navbar-collapse" id="myNavbar">
 					<ul class="nav navbar-nav navbar-left">
 						<li><a href="#about">HOME</a></li>
-						<li><a href="#services">SEE ADS</a></li>
+						<li><a href="/AdsPage/viewAdverts/&none&/created/desc/none">SEE ADS</a></li>
 						<li><a href="#portfolio">CREATE AD</a></li>
 					</ul>
 
@@ -73,7 +73,7 @@
 						else
 						{
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="/user/logout">@ViewBag.Name (Logout)</a></li>
+								<li><a href="/adsPage/viewadverts/">@ViewBag.Name (Logout)</a></li>
 							</ul>
 						}
 					}
