--- a/WebSite/Views/Home/AdView.cshtml
+++ b/WebSite/Views/Home/AdView.cshtml
@@ -1,121 +1,137 @@
 ﻿<style>
 
-	#banner {
-		background-image: linear-gradient(to right, #320D7E, #25E7E1);
-		color: #ffffff;
-		padding-top: 100px;
-	}
+    .col-centered{
+    float: none;
+    margin: 0 auto;
+    }
 
-	.thumbnail {
-		padding: 0 0 15px 0;
-		border: none;
-		border-radius: 0;
-	}
+    .zoom:hover {
+  -ms-transform: scale(1.05); /* IE 9 */
+  -webkit-transform: scale(1.05); /* Safari 3-8 */
+  transform: scale(1.05); 
+    }
 
-		.thumbnail img {
-			width: 100%;
-			height: 240px;
-			margin-bottom: 10px;
-		}
+    .itemShadow {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.05);
+    }
 
-	.price {
-		font-size: 16px;
-	}
+    .middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
 
-	.viewMoreBtn {
-		background-color: #F8D210;
-		border-radius: 24px;
-		border-color: transparent;
-		color: #fff;
-	}
+.imageBox:hover .image {
+  opacity: 0.3;
+}
 
-	.productCard {
-		box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	}
+.imageBox:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  background-color: #320D7E;
+  border-radius:48px;
+  color: white;
+  font-size: 20px;
+  padding: 32px 64px;
+}
 </style>
 
 
 @{
-	Layout = "~/Views/Shared/_Layout.cshtml";
-	ViewBag.Title = "Classified Ads";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Classified Ads";
 }
 
-<section id="banner">
-
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-6">
-				<h1 style="font-size: 55px">Post Yours Ads</h1>
-				<p>For Successful Businesses & For You</p>
-				<div class="row" style="margin-top: 50px">
-					<form action="#">
-						<div class="form-group col-sm-8">
-							<input type="text" class="form-control" id="searchQuery" placeholder="Search Item" style="border-radius:24px; padding:22px">
-						</div>
-						<div class="form-group col-sm-6">
-							<select class="form-control" id="sel1" style="border-radius:24px">
-								<option>Gampaha</option>
-								<option>Galle</option>
-								<option>Kandy</option>
-								<option>Colombo</option>
-								<option>Ekala</option>
-								<option>Kandana</option>
-								<option>Kottawa</option>
-								<option>Ganemulla</option>
-								<option>Homagama</option>
-								<option>Maharagama</option>
-							</select>
-						</div>
-						<div class="col-sm-2">
-							<button type="submit" class="btn btn-default" style="background-color:#F8D210; border-radius:24px; border-color: transparent">Search</button>
-						</div>
-					</form>
-				</div>
-			</div>
-			<div class="col-sm-6 text-center">
-				<img src="~/images/colloborate2.png" style="width:60%; height:50%" />
-			</div>
-		</div>
-	</div>
-	<img src="~/images/layerimage.png" style="width: 100%;" class="bottom" />
-
-</section>
 
 
+<div class="container" style="margin-top:50px">
+    @{ WebSite.Models.AdvertisementModel advert = (WebSite.Models.AdvertisementModel)ViewData["Adverts"];
+        <h1 style="font-size: 50px"><strong>@advert.ItemName</strong></h1>
+        <p><strong><i>Uploaded On: @advert.Created || Views: @advert.ViewCount</i></strong></p>
+        <div class="row">
+            <div class="col-sm-8">
+                <div class="thumbnail imageBox">
+                    <img src="~/images/sampleProduct3.jpg" class="image" id="iImage" alt="Product Image" style="width:100%; height:600px">
+                    <div class="middle">
+                        <div class="text">Rs. @advert.Price</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="row zoom thumbnail itemShadow">
+                    <div class="col-sm-4" style="margin-top:10px">
+                        <img src="~/images/iconsMobile.png" class="center-block" style="width:60px; height:60px" />
+                    </div>
+                    <div class="col-sm-8" style="margin-top:10px">
+                        <p style="font-size: 12px; margin:0"><i>Contact</i></p>
+                        <p style="font-size: 26px;"><strong>@advert.Tele</strong></p>
+                    </div>
+                </div>
+                <div class="row zoom thumbnail itemShadow">
+                    <div class="col-sm-4" style="margin-top:10px">
+                        <img src="~/images/iconsLocation.png" class="center-block" style="width:60px; height:60px" />
+                    </div>
+                    <div class="col-sm-8" style="margin-top:10px">
+                        <p style="font-size: 12px; margin:0"><i>Location</i></p>
+                        <p style="font-size: 26px;"><strong>@advert.City</strong></p>
+                    </div>
+                </div>
+                <div class="row zoom thumbnail itemShadow">
+                    <div class="col-sm-4" style="margin-top:10px">
+                        <img src="~/images/iconsCategorize.png" class="center-block" style="width:60px; height:60px" />
+                    </div>
+                    <div class="col-sm-8" style="margin-top:10px">
+                        <p style="font-size: 12px; margin:0"><i>Category</i></p>
+                        <p style="font-size: 26px;"><strong>@advert.ItemCategory</strong></p>
+                    </div>
+                </div>
+                <div class="row zoom thumbnail itemShadow">
+                    <div class="col-sm-4" style="margin-top:10px">
+                        <img src="~/images/iconsNew.png" class="center-block" style="width:60px; height:60px" />
+                    </div>
+                    <div class="col-sm-8" style="margin-top:10px">
+                        <p style="font-size: 12px; margin:0"><i>Condition</i></p>
+                        <p style="font-size: 26px;"><strong>@advert.Con</strong></p>
+                    </div>
+                </div>
+                <div class="row zoom thumbnail itemShadow">
+                    <div class="col-sm-4" style="margin-top:10px">
+                        <img src="~/images/iconsCount.png" class="center-block" style="width:60px; height:60px" />
+                    </div>
+                    <div class="col-sm-8" style="margin-top:10px">
+                        <p style="font-size: 12px; margin:0"><i>Availability</i></p>
+                        <p style="font-size: 26px;"><strong>@advert.ItemCount</strong></p>
+                    </div>
+                </div>
+                <div class="row zoom thumbnail itemShadow">
+                    <div class="col-sm-4" style="margin-top:10px">
+                        <img src="~/images/iconsHandshake.png" class="center-block" style="width:60px; height:60px" />
+                    </div>
+                    <div class="col-sm-8" style="margin-top:10px">
+                        <p style="font-size: 12px; margin:0"><i>Negotiable</i></p>
+                        <p style="font-size: 26px;"><strong>@advert.Negotiable</strong></p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<div class="container">
-
-	<div class="row">
-
-		@{	WebSite.Models.AdvertisementModel advert = (WebSite.Models.AdvertisementModel)  ViewData["Adverts"];
-			
-
-				<div class="col-sm-4">
-					<div class="thumbnail  productCard">
-						<img src="~/images/sampleProduct1.jpg" alt="Product">
-						<div class="row" style="margin-top:10px">
-							<div class="col-sm-7" style="padding-left:30px">
-								<p><strong>ItemName/ @advert.ItemName</strong></p>
-								<p><strong>Description/ @advert.ItemDescription</strong></p>
-								<p><strong>ItemCat/ @advert.ItemCategory</strong></p>
-								<p><strong>ItemCount/ @advert.ItemCount</strong></p>
-								<p><strong>Negotiable/ @advert.Negotiable</strong></p>
-								<p><strong>Tele/ @advert.Tele</strong></p>
-								<p><strong>Updated/ @advert.Updated</strong></p>
-								<p><strong>ViewCount/ @advert.ViewCount</strong></p>
-								<p><strong>Created /@advert.Created</strong></p>
-								<p><strong>Condition/ @advert.Con</strong></p>
-								<p><strong>City/ @advert.City</strong></p>
-								<p class="price"><strong>Price/ @advert.Price</strong></p>
-							</div>
-							<div class="col-sm-5 text-center">
-								<a href="/home/adview/@advert.ItemId" class="btn btn-default btn-lg viewMoreBtn" role="button">View More</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			
-		}
-
-	</div>
+        <div style="margin-top: 25px; margin-bottom: 50px">
+            <div class="row">
+                <div class="col-sm-8">
+                    <p style="font-size:16px"><i>@advert.ItemDescription</i></p>
+                </div>
+            </div>
+        </div>
+    }
 </div>
+
+
+
+
