--- a/WebSite/Views/Home/PostAd.cshtml
+++ b/WebSite/Views/Home/PostAd.cshtml
@@ -71,45 +71,45 @@
 
 <div class="container" id="regForm">
     <h1 class="text-center" style="font-size: 60px"><strong>One Click Away For A Great Ad!</strong></h1>
-    <form action="/action_page.php">
+    <form action="/ad/postAd/" method="post">
         <div class="row">
             <div class="col-sm-6">
                 <div>
                     <div class="form-group">
                         <label for="iName">Item Name:</label>
-                        <input type="text" class="form-control formInput no-border" placeholder="Item Name" id="iName" required>
+                        <input name="iName"  type="text" class="form-control formInput no-border" placeholder="Item Name" id="iName" required>
                     </div>
                     <div class="form-group">
                         <label for="iCategory">Item Category:</label>
-                        <input type="text" class="form-control formInput no-border" placeholder="Item Category" id="iCategory" required>
+                        <input name="iCategory" type="text" class="form-control formInput no-border" placeholder="Item Category" id="iCategory" required>
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-sm-6">
                         <label for="iAvailable">Items Available:</label>
-                        <input type="text" class="form-control formInput" placeholder="Availability" id="iAvailable" required>
+                        <input name="iAvailable" type="text" class="form-control formInput" placeholder="Availability" id="iAvailable" required>
                     </div>
                     <div class="form-group col-sm-6">
                         <label for="iLoc">Location:</label>
-                        <input type="email" class="form-control formInput" placeholder="Item Location" id="iLoc" required>
+                        <input name="iLoc" type="text" class="form-control formInput" placeholder="Item Location" id="iLoc" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="iDescription">Description:</label>
-                    <textarea class="form-control formInput" rows="5" placeholder="Describe Your Product" id="iDescription" required></textarea>
+                    <textarea name="iDescription" class="form-control formInput" rows="5" placeholder="Describe Your Product" id="iDescription" required></textarea>
                 </div>
                 <div class="row">
                     <div class="form-group col-sm-3">
                         <label for="iContact">Contact Number:</label>
-                        <input type="email" class="form-control" placeholder="Mobile" id="iContact" required>
+                        <input name="iContact" type="tel" class="form-control" placeholder="Mobile" id="iContact" required>
                     </div>
                     <div class="form-group col-sm-3">
                         <label for="iPrice">Price:</label>
-                        <input type="email" class="form-control" placeholder="Rs." id="iPrice" required>
+                        <input name="iPrice" type="text" class="form-control" placeholder="Rs." id="iPrice" required>
                     </div>
                     <div class="form-group col-sm-3">
                         <label for="iCondition">Condition:</label>
-                        <select class="form-control" id="iCondition">
+                        <select class="form-control" name="iCondition" id="iCondition">
                             <option>Brand New</option>
                             <option>Used</option>
                             <option>Refurbished</option>
@@ -117,7 +117,7 @@
                     </div>
                     <div class="form-group col-sm-3">
                         <label for="iNegotiable">Negotiable:</label>
-                        <select class="form-control" id="iNegotiable">
+                        <select class="form-control" id="iNegotiable" name="iNegotiable">
                             <option>Negotiable</option>
                             <option>Not Negotiable</option>
                         </select>
@@ -127,14 +127,14 @@
             <div class="col-sm-6">
                 <div class="col-sm-10 col-centered">
                     <div class="thumbnail">
-                        <img src="http://placehold.it/180" id="iImage" alt="Product Image" style="width:100%; height:400px">
+                        <img src="http://placehold.it/180" id="iImage" name="iImage"  alt="Product Image" style="width:100%; height:400px">
                     </div>
                 </div>
                 <div class="form-group col-sm-8 col-centered">
                     <div class="input-group">
                         <span class="input-group-btn">
                             <span class="btn btn-default btn-file">
-                                Browse… <input type="file" id="imgInp">
+                                Browse… <input type="file" id="imgInp" name="imgInp">
                             </span>
                         </span>
                         <input type="text" class="form-control" readonly>
